[gd_scene load_steps=3 format=3 uid="uid://cc63afj3rd6kt"]

[ext_resource type="Script" path="res://export_panel.gd" id="1_24gqx"]

[sub_resource type="LabelSettings" id="LabelSettings_4t3ib"]
font_size = 15
font_color = Color(0.788235, 0.788235, 0.788235, 1)

[node name="Export" type="MarginContainer"]
script = ExtResource("1_24gqx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "A recursive algorithm is used for drawing fractals for export. You can get an idea of how detailed the result will be from the number of steps the algorithm is expected to take."
label_settings = SubResource("LabelSettings_4t3ib")
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Recursion level"

[node name="ExportLevel" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 20.0
value = 7.0
allow_greater = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Expected computation steps:"

[node name="ExpectedStepsLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "A lot"

[node name="ExportButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Export in 4K"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
initial_position = 2
size = Vector2i(373, 80)
dialog_text = "Image exported!"
